--- a/ProcessamentoImagens.ipynb
+++ b/ProcessamentoImagens.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ProcessamentoImagens.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXH4REdHTYnfBETm8ONceV",
+      "authorship_tag": "ABX9TyNS1e5bG5vaNAwHLLiLi72T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -346,13 +346,13 @@
           "height": 151
         },
         "id": "vnD0qPun9-Mc",
-        "outputId": "195da9e8-71b7-40e5-94a5-88c133bb7f35"
+        "outputId": "5ddf136f-9e58-44e0-99c0-666253fb9485"
       },
       "source": [
         "plt.imshow(image_dataset_valid[100], cmap='gray')\r\n",
         "print(label_images_valid[100])"
       ],
-      "execution_count": 102,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,6 +374,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A_PDh06nSG1O"
+      },
+      "source": [
+        "### Segmentação"
       ]
     },
     {
