--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbOpG20fbMXFi22XVeLKT0",
+      "authorship_tag": "ABX9TyMyv5fuyy/2LOJUyq2Ah/dp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,8 @@
         "#Processamento de imagem\r\n",
         "## Este trabalho utiliza o dataset que contém imagens de captchas de segurança com caracteres de letras e numeros.\r\n",
         "Disponivel em: https://www.kaggle.com/fournierp/captcha-version-2-images\r\n",
+        "\r\n",
+        "Acurácia do modelo: 96.73%\r\n",
         "\r\n",
         "By: Adna"
       ]
